changing font display optional to swap

--- a/index.html
+++ b/index.html
@@ -12,33 +12,33 @@
     <style>
       @font-face {
         src: url("./assets/fonts/Inter-Regular.woff2");
-        font-display: optional;
+        font-display: swap;
         font-family: "Inter";
       }
 
       @font-face {
         src: url("./assets/fonts/Inter-SemiBold.woff2");
-        font-display: optional;
+        font-display: swap;
         font-family: "Inter";
         font-weight: 500;
       }
 
       @font-face {
         src: url("./assets/fonts/Inter-Bold.woff2");
-        font-display: optional;
+        font-display: swap;
         font-family: "Inter";
         font-weight: bold;
       }
 
       @font-face {
         src: url("./assets/fonts/FiraCode-Regular.woff2");
-        font-display: optional;
+        font-display: swap;
         font-family: "Fira Code";
       }
 
       @font-face {
         src: url("./assets/fonts/FiraCode-Bold.woff2");
-        font-display: optional;
+        font-display: swap;
         font-family: "Fira Code";
         font-weight: bold;
       }
