removing file reader

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       <div id="root"></div>
     </main>
     <footer>
-      <p>🔥 <span class="bold">hot tip</span>: try uploading files >100gb</p>
+      <p><span class="bold">🔥 hot tip</span>: try uploading files >100gb</p>
     </footer>
     <script type="module" src="/src/main.tsx" async></script>
   </body>
