--- a/index.html
+++ b/index.html
@@ -44,13 +44,8 @@
       }
 
       html,
-      body,
-      #root {
+      body {
         height: 100%;
-      }
-
-      #root {
-        display: none;
       }
 
       body {
