--- a/index.html
+++ b/index.html
@@ -44,13 +44,15 @@
       }
 
       html,
-      body {
+      body,
+      #root {
         height: 100%;
       }
 
       body {
         margin: 0;
         font-family: "Inter", sans-serif;
+        overflow: hidden;
       }
 
       h1,
@@ -79,7 +81,7 @@
         text-align: center;
       }
 
-      .center-content {
+      .file-selection-container {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -117,7 +119,7 @@
         cursor: pointer;
       }
 
-      footer {
+      .notification-container {
         position: fixed;
         bottom: 15px;
         left: 15px;
@@ -130,18 +132,18 @@
         opacity: 0.8;
       }
 
-      footer .bold {
+      .notification-container .bold {
         font-weight: bold;
       }
 
-      footer:hover {
+      .notification-container:hover {
         opacity: 1;
       }
     </style>
   </head>
   <body>
     <main>
-      <section class="center-content">
+      <section class="file-selection-container">
         <h1 class="title">JSON Tree Viewer</h1>
         <p class="description">
           Simple JSON Viewer that runs completely on-client. No data exchange
@@ -155,9 +157,9 @@
 
       <div id="root"></div>
     </main>
-    <footer>
+    <aside class="notification-container">
       <p><span class="bold">🔥 hot tip</span>: try uploading files >100gb</p>
-    </footer>
+    </aside>
     <script type="module" src="/src/main.tsx" async></script>
   </body>
 </html>
