feat: adding padding

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
         font-weight: bold;
       }
 
+      * {
+        box-sizing: border-box;
+      }
+
       html,
       body,
       #root {
