--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
       }
 
       @font-face {
+        src: url("./assets/fonts/Inter-SemiBold.woff2");
+        font-display: swap;
+        font-family: "Inter";
+        font-weight: 700;
+      }
+
+      @font-face {
         src: url("./assets/fonts/Inter-Bold.woff2");
         font-display: swap;
         font-family: "Inter";
